Minor UI fixes
- Extra margin removed from daily additional info div.

- Created utility function secondsToHoursAndMinutes for use on sunshine_duration.

- Updated utility function convertBearingToDirection to work with 16 directions instead of 4.

--- a/src/App.css
+++ b/src/App.css
@@ -467,4 +467,8 @@ h1, h2, h3, p {
   #daily-forecast-info-div {
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+    #daily-forecast-info-div > .forecast-info-inner-div:not(:nth-child(-n+1)) {
+      margin-top: 0px;
+    }
 }
